# fsp-observer

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml  release.yml
.gitlab/: CODEOWNERS
configuration/: config.py  types.py
configuration/artifacts/: FlareSystemsCalculator.json  FlareSystemsCalculatorV2.json  FlareSystemsCalculator_stable.json  RewardManager.json  ValidatorRewardManager.json  VoterPreRegistry.json  VoterPreRegistryV2.json  VoterRegistry.json  VoterRegistryV2.json  VoterRegistry_stable.json
observer/: address.py  alert_text.py  contract_address_manager.py  contract_manager.py  fast_updates_manager.py  message.py  metrics.py  notification.py  observer.py  portal_post.py  reward_epoch_manager.py  signing_policy_manager.py  types.py  voting_round.py
observer/validation/: fdc.py  ftso.py  minimal_conditions.py  types.py  validation.py
plugins/zabbix-integration/: README.md  zbx_export_fsp_observer_template.yaml
plugins/zabbix-integration/conf/: zabbix_agentd.userparams.conf
