[project]
name = "fsp-observer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "requests==2.32.5",
    "py-flare-common==0.1.6",
    "attrs==25.3.0",
    "python-dotenv==1.1.1",
    "web3==7.13.0",
    "prometheus-client==0.21.1",
]

[dependency-groups]
dev = [
    "ruff==0.13.3",
    "pre-commit==4.3.0",
    "types-requests",
]

[tool.ruff]
extend-exclude = ['venv', 'env', 'migrations']

[tool.ruff.lint]
select = [
    'F',    # pyflakes
    'E',    # pycodestyle
    'W',    # pycodestyle
    'I',    # isort
    'UP',   # pyupgrade
    'B',    # flake8-bugbear
    'C',    # flake8-comprehensions
    'DTZ',  # flake8-datetimez
    'RUF',  # ruff
    'N',    # pep8-naming
]

ignore = [
    'C901', # complex structure, not needed
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
    'F401', # unused import
    'E402', # module import not at top of file
]

[tool.pyright]
reportIncompatibleVariableOverride = false
